--- a/package.json
+++ b/package.json
@@ -36,8 +36,11 @@
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.10.3",
     "react-markdown": "^8.0.7",
+    "react-speech-kit": "^3.0.1",
+    "react-speech-recognition": "^3.10.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.5.3",
+    "regenerator-runtime": "^0.14.1",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "sonner": "^1.5.0",
@@ -48,6 +51,7 @@
     "@types/node": "^22.5.0",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
+    "@types/react-speech-recognition": "^3.9.5",
     "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
@@ -56,6 +60,5 @@
     "tailwindcss": "^3.4.10",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.5.4"
-  },
-  "packageManager": "pnpm@8.6.3"
+  }
 }
